<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_left"
        android:layout_marginTop="10dp"
        android:title="@string/personal_data"
        android:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_personal_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/first_name_emp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="12dp"
            android:textColorHint="@color/gray"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_personal_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/last_name_emp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="12dp"
            android:textColorHint="@color/gray"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_personal_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/e_mail_emp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="12dp"
            android:textColorHint="@color/gray"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_personal_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/birthday_emp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="12dp"
            android:textColorHint="@color/gray"
            tools:ignore="Autofill" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_phone"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_personal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:background="@android:color/transparent"
            android:hint="@string/number_emp"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingVertical="12dp"
            android:textColorHint="@color/gray" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn__use_save_personal_info"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/light_green_for_button_save_personal_info"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:cornerRadius="16dp" />

</LinearLayout>