<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:layout_marginHorizontal="20sp"    android:gravity="center"    android:orientation="vertical"    tools:context=".ui.screen.payment.success.SuccessFragment">    <ImageView        android:id="@+id/img_success"        android:layout_width="180dp"        android:layout_height="154dp"        android:scaleType="centerCrop"        android:src="@drawable/ic_success" />    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/success"        android:textAlignment="center"        android:textColor="@color/black"        android:textSize="26sp"        android:textStyle="bold" />    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="16dp"        android:text="@string/saveToure"        android:textAlignment="center"        android:textColor="@color/black"        android:textSize="20sp" />    <com.google.android.material.button.MaterialButton        android:id="@+id/button_continue"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginHorizontal="20dp"        android:layout_marginTop="24dp"        android:layout_marginBottom="10dp"        android:backgroundTint="@color/button_next"        android:paddingVertical="14dp"        android:text="@string/to_main"        android:textColor="@color/white"        android:textSize="16sp"        app:cornerRadius="16dp" /></LinearLayout>