<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:clipToOutline="true"    android:orientation="vertical"    android:background="@color/white"    android:layout_gravity="center"    tools:targetApi="s">    <LinearLayout        android:id="@+id/title_contacts"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/white"        android:orientation="horizontal"        android:paddingTop="28dp"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <Toolbar            android:id="@+id/tv_contacts"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:navigationIcon="@drawable/ic_arrow_left"            android:title="@string/contacts"            android:titleTextColor="@color/black"            android:textSize="21sp" />    </LinearLayout>    <LinearLayout        android:id="@+id/contacts_networks"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:paddingHorizontal="40dp"        android:backgroundTint="@color/white">        <View            android:layout_width="match_parent"            android:layout_height="60dp"/>        <TextView            android:id="@+id/tv_contacts_description"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="@string/we_are_in_social_networks"            android:textColor="@color/black"            android:textSize="15sp"            android:paddingBottom="24dp"            android:textStyle="bold" />        <com.google.android.material.button.MaterialButton            android:id="@+id/btn_contact_whats_app"            android:backgroundTint="@color/white_for_btn"            android:layout_width="match_parent"            android:layout_height="48dp"            android:textSize="13sp"            android:textColor="@color/black"            android:textStyle="bold"            android:textAlignment="center"            android:textAllCaps="false"            app:cornerRadius="16sp"            android:layout_marginBottom="12dp"            app:icon="@drawable/ic_whatsapp"            app:iconGravity="textStart"            app:iconTint="@color/black"            android:text="@string/whatsapp" />        <com.google.android.material.button.MaterialButton            android:id="@+id/btn_contact_telegram"            android:layout_width="match_parent"            android:layout_height="48dp"            android:text="@string/telegram"            android:textSize="13sp"            android:textStyle="bold"            android:textColor="@color/black"            android:textAllCaps="false"            app:cornerRadius="16sp"            android:layout_marginBottom="12dp"            app:icon="@drawable/ic_telegram"            app:iconGravity="textStart"            app:iconTint="@color/black"            android:backgroundTint="@color/white_for_btn" />        <com.google.android.material.button.MaterialButton            android:id="@+id/btn_contact_instagram"            android:layout_width="match_parent"            android:layout_height="48dp"            android:text="@string/instagram"            android:textSize="13sp"            android:textStyle="bold"            android:textColor="@color/black"            android:textAllCaps="false"            app:cornerRadius="16sp"            app:icon="@drawable/ic_instagram"            app:iconGravity="textStart"            app:iconTint="@color/black"            android:backgroundTint="@color/white_for_btn" />    </LinearLayout></LinearLayout>