<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.screen.profile.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:title="@string/profile"
        android:titleTextColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_auth_registration"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/user_info_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:backgroundTint="@color/dark_blue_for_button"
        android:text="@string/auth"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:cornerRadius="16dp" />

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/function_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_auth_registration">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_launcher_background"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/bg_indicator"
                android:padding="8dp"
                android:src="@drawable/ic_camera"
                tools:ignore="ContentDescription" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_emp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_number_emp"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/function_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/spacer_out"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_container">

        <Button
            android:id="@+id/btn_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_info"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/personal_data"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="visible" />

        <View
            android:id="@+id/btn_personal_info_under_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60"
            />

        <Button
            android:id="@+id/btn_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_info"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/about_us"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <Button
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_phone"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:drawableTint="@color/black"
            android:paddingVertical="16dp"
            android:text="@string/contacts"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <Button
            android:id="@+id/btn_question_and_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_question"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/question_and_answer"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <Button
            android:id="@+id/btn_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_notification"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/notifications"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <Button
            android:id="@+id/btn_privacy_and_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_book"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/privacy_and_policy"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

        <Button
            android:id="@+id/btn_terms_of_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_book"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="8dp"
            android:paddingVertical="16dp"
            android:text="@string/terms_of_use"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/neutral_n60" />

    </LinearLayout>

    <View
        android:id="@+id/spacer_out"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_out_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/function_container" />

    <Button
        android:id="@+id/btn_out_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/out_or_exit"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="16sp"
        app:cornerRadius="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>